# ChangeLog for dev-ruby/money
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2

  22 May 2015; Hans de Graaff <graaff@gentoo.org> -money-5.0.0.ebuild,
  -money-5.1.0.ebuild:
  Cleanup.

*money-6.1.1 (06 Jun 2014)

  06 Jun 2014; Hans de Graaff <graaff@gentoo.org> +money-6.1.1.ebuild:
  Version bump.

*money-6.0.0 (29 Nov 2013)

  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> +money-6.0.0.ebuild:
  Version bump.

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> -money-2.1.5-r1.ebuild,
  -money-3.7.1.ebuild, -money-4.0.1.ebuild:
  Cleanup.

*money-5.1.0 (23 Nov 2012)

  23 Nov 2012; Hans de Graaff <graaff@gentoo.org> +money-5.1.0.ebuild:
  Version bump.

*money-5.0.0 (13 Apr 2012)

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> +money-5.0.0.ebuild:
  Version bump.

  09 Jan 2012; Hans de Graaff <graaff@gentoo.org> money-4.0.1.ebuild:
  Also install the currency information.

*money-4.0.1 (08 Jan 2012)

  08 Jan 2012; Hans de Graaff <graaff@gentoo.org> +money-4.0.1.ebuild:
  Version bump.

*money-3.7.1 (24 Jun 2011)

  24 Jun 2011; Hans de Graaff <graaff@gentoo.org> +money-3.7.1.ebuild:
  Version bump.

  24 Jun 2011; Hans de Graaff <graaff@gentoo.org> -money-2.1.5.ebuild:
  Remove old version.

*money-2.1.5-r1 (18 Aug 2010)

  18 Aug 2010; Hans de Graaff <graaff@gentoo.org> +money-2.1.5-r1.ebuild:
  Convert to ruby-fakegem.

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org> -money-2.1.4.ebuild:
  Remove old version.

  03 Jan 2010; Hans de Graaff <graaff@gentoo.org> money-2.1.5.ebuild,
  metadata.xml:
  Install README, fix license.

  02 Jan 2010; Hans de Graaff <graaff@gentoo.org> money-2.1.5.ebuild:
  Don't build documentation since hanna is broken.

*money-2.1.4 (06 Sep 2009)

  06 Sep 2009; Hans de Graaff <graaff@gentoo.org> +money-2.1.4.ebuild:
  Version bump.

  02 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump
