@@ -1,2 +1,3 @@
 DIST money-6.0.0.gem 57344 SHA256 15f377fe088260e3e2240365c0a0b401b094e95756f03f71a10f623cfd4d17a5 SHA512 5554d648bbd78e8c3b7a0f9bd84281428ff3e25047f47a7b2ad0db77f3ce4111e19fbc480f543bfedd6c0fe1764b0b11273f248ad24fbf148e922a177d681fca WHIRLPOOL ffbdb4d5c8c492c3bec6074cd33f1e1166b34e3aa227e7ea12510fae803c7708437c4c3b4efaa78c0e66226555a7bce9e0c85871cd29ba91df317a821fa66098
 DIST money-6.1.1.gem 52736 SHA256 14ab5e1c23ebe92341360d8195b847aa4585902f44444cc2225d7677bd9e3c5c SHA512 1da8d22b12e3317fb7d7ec944bd9a1aaa936dbde0b224fbb9d52e41323f23a9854e8df04921034735fe2ed3c95ddddc9be1fdbc280741005f23f73a3587ad97b WHIRLPOOL 96cc44d39334cfc92f71e161dd0d2c32ba16c7eba0ece5c1d4bd81e5e376a7da00018755bcd3c5cbbe4ea557ab30a25b7a36c5ed5c127821dfc41acd7c102725
+DIST money-6.5.1.gem 58880 SHA256 4181aa9983978e59c22573f0db29d2db6d527420a0d48a1a3e058aab55e72d51 SHA512 702513505f65b4ba0871930dd17aa75054e92a6c7d06f8f7e772efe7ce7a2e8fdd63aff27dab9e824cd735a5f25dec1e2c78fb319a20c7437285f2ed5168a98a WHIRLPOOL 790a0e706eaa6cd339080f68fa7cf98bf07f708b3810d918ef81d4de58e9d90078f1fff7fee1eecfa08d4e98cf1d18f9e2a9c43cc9a37f0c17edbcc10f9b1d44
