@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/money
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 
+*money-6.5.1 (22 May 2015)
+
+  22 May 2015; Hans de Graaff <graaff@gentoo.org> +money-6.5.1.ebuild:
+  Version bump.
+
   22 May 2015; Hans de Graaff <graaff@gentoo.org> -money-5.0.0.ebuild,
   -money-5.1.0.ebuild:
   Cleanup.
